--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "elastic-apm-node": "^4.7.3",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "sqlite3": "^5.1.7"
