--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "elastic-apm-node": "^4.7.3",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.7",
     "sqlite3": "^5.1.7"
   }
 }
