--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "Abia Fortuna",
   "license": "ISC",
@@ -16,7 +17,9 @@
     "elastic-apm-node": "^4.7.3",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.7",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
